  children of the selected container.
  
[Fixed]
- Errors for Data Crow client in case the server was not responding when logging on.
- Filtering on references didn't work (sometimes).
- Module disappears completely when a reference field is added referencing itself
  (reference field on software pointing to software).
- The log window (CTRL+L) did not show latest entries.


-----------------------------------------------------------------------------------------
Data Crow version 4.6.1                                            Released on 2023-02-12
-----------------------------------------------------------------------------------------

[Fixed]
- The module files have been corrected. They were corrupted in version 4.6.


-----------------------------------------------------------------------------------------
Data Crow version 4.6                                              Released on 2023-02-09
-----------------------------------------------------------------------------------------

[New]
- iTunes online search.

[Changed]
- The executables of Data Crow are now signed by my own official certificate. 
  This means no more issues with virus scanners and no more unknown 
  publisher messages for Windows users. I had to update the datacrow-install module
  to include the signing. This will only work on my build machines as the certificate 
  is private to myself. There is no code hidden from you, it's still true to form for 
  an open source project. All other developers won't be able to do is to generate the
  official Data Crow executables.
- The web modules is now configured for HTTPS (only). A default self signed certificate
  has been added. This can be used for internal / local network use. If the application
  needs to be running in a web environment it is recommended to add a valid certificate
  which can be configured in ssl/datacrow-ssl.properties.
  Always go to the HTTPS version in the browser when navigating to the web module 
  from now on.